# playground

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml  docker-image.yml  window_ci.yml
dev/: Dockerfile
src/: CMakeLists.txt  Doxyfile  calculate.cpp  calculate.h  main.cpp  test.cpp
